# obs-emulens

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  buildspec.json  dev.sh
.github/scripts/: .Aptfile  build-ubuntu  install-deps-ubuntu.sh
.github/scripts/utils.zsh/: check_ubuntu
.github/workflows/: build-project.yaml
CMake/: FindOBS.cmake
cmake/: FindOBS.cmake
data/shaders/: bokeh.shader  canny-edge.shader  handheld.shader  light-leak.shader  star-burst.shader  style-transfer.shader
src/: effects.c  effects.h  plugin-main.c  plugin-support.c.in  plugin-support.h
src/core/: effect-core.c  effect-core.h  param-system.c  shader-loader.c
src/effects/: effect-registry.c  effect-registry.h
src/effects/bokeh/: bokeh.c  bokeh.h
src/effects/handheld/: handheld.c  handheld.h
src/effects/lightleak/: lightleak.c  lightleak.h
src/effects/starburst/: starburst.c  starburst.h
src/effects/style_transfer/: style_transfer.c  style_transfer.h
src/utils/: logging.h
